# DirectXShaderCompiler

include/dxc/Support/: HLSLOptions.td  SPIRVOptions.h
include/llvm/Bitcode/: BitstreamWriter.h  ReaderWriter.h
lib/Bitcode/Writer/: BitcodeWriter.cpp
lib/DxcSupport/: HLSLOptions.cpp
tools/clang/lib/SPIRV/: LowerTypeVisitor.cpp  SpirvBuilder.cpp
tools/clang/tools/: CMakeLists.txt
tools/clang/tools/dxsc/: CMakeLists.txt  dxsc.cpp  dxsc.rc
